SearchFunction implemented
